# agentic_search

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  ask_docs.py  cleanup.py  cli.py  list_docs.py  pyproject.toml  setup_docs.py
.github/workflows/: ci.yml  test.yml  tests.yml
tests/: test_ask.py  test_citations.py  test_cli.py  test_cli_basic.py  test_coverage.py
