[project]
name = "agentic-search"
version = "0.1.0"
description = "A simple RAG CLI tool to search documents using OpenAI vector stores"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pathspec",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest",
]
lint = [
    "ruff",
]
typecheck = [
    "mypy",
]

[project.scripts]
agentic-search = "cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
files = ["cli.py"]
